🔧 fix(Button.module.scss): add position and z-index properties to button class 🔧 fix(Columns.module.scss): add position and z-index properties to columns with style '100%' 🔧 fix(ProgramCard.module.scss): add overflow property to .program-card-image class 🔧 fix(ProgramCard.module.scss): add transition property to .program-card-image img class 🔧 fix(_eventsListing.scss): add position and z-index properties to events listing container 🔧 fix(_twoColumnsHighlight.scss): add position and z-index properties to two columns highlight container 🔧 fix(_transitions.scss): add $anim-bounce animation 🔧 fix(_extendedBackground.scss): adjust width and position of pseudo element

--- a/src/styles/layouts/page/_twoColumnsHighlight.scss
+++ b/src/styles/layouts/page/_twoColumnsHighlight.scss
@@ -9,6 +9,11 @@
   padding-block: 0;
   // overflow-y: hidden;
 
+  & > div {
+    position: relative;
+    z-index: tokens.$layer-2;
+  }
+
   .media-element {
     display: flex;
     position: relative;
