--- a/src/styles/tokens/_transitions.scss
+++ b/src/styles/tokens/_transitions.scss
@@ -12,3 +12,6 @@ $transition-timing-function: ease-in-out;
 
 //* Transition Property
 $transition-property: all;
+
+//* Animations
+$anim-bounce: cubic-bezier(0.68, -0.55, 0.265, 1.55);
